k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: ptcert-staging
  name: pt-binance-01
  namespace: pt-binance-01
spec:
  rules:
  - host: pt-binance.lucascga.com
    http:
      paths:
      - backend:
          servicePort: 8081
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - pt-binance-01.lucascga.com
    secretName: tls-pt-binance-ingress
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
